fix(search): on small screens

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -475,8 +475,7 @@ $search-filter-panel-gap: 40px;
     width: 100%;
   }
 
-  
-  .search__filter_panel_wrap {
+  .search__filter_panel {
     position: absolute;
   }
 }
